Primeira versão site -parte 2

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Intersect</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
           rel="stylesheet">
+
 
 
 </head>
@@ -50,38 +51,84 @@
             <div class="conjunto_texto">
                 <h2 class="titulo2">Quem Somos?</h2>
                 <p class="quem-somos texto-padrão">
-                    Na Intersect, somos mais do que uma empresa  - somos um movimento para unir talentos e oportunidades no
-                    mundo da tecnologia e design. Combinando os conhecimentos dos alunos dos cursos de Ciência da Computação,
-                    Sistema da Informação e Design da Universidade Federal da Paraíba, estamos contribuindo ativamente para o futuro
-                    do mercado digital. <br> Nosso propósito é claro: fornecer soluções inovadoras e personalizadas que integram
-                    tecnologia da informação, estratégia e inteligência, impulsionando o sucesso e a eficiência de nossos clientes.
-                    Além disso, capacitamos os alunos com experiências práticas para o mercado de trabalho. Estamos aqui para ajudar
+                    Na Intersect, somos mais do que uma empresa - somos um movimento para unir talentos e oportunidades
+                    no
+                    mundo da tecnologia e design. Combinando os conhecimentos dos alunos dos cursos de Ciência da
+                    Computação,
+                    Sistema da Informação e Design da Universidade Federal da Paraíba, estamos contribuindo ativamente
+                    para o futuro
+                    do mercado digital. <br> Nosso propósito é claro: fornecer soluções inovadoras e personalizadas que
+                    integram
+                    tecnologia da informação, estratégia e inteligência, impulsionando o sucesso e a eficiência de
+                    nossos clientes.
+                    Além disso, capacitamos os alunos com experiências práticas para o mercado de trabalho. Estamos aqui
+                    para ajudar
                     pequenas empresas a marcarem presença online e oferecer análises de dados precisas e importantes.
                 </p>
                 <a href="" class="botao-padrao contact-button ">Saiba mais</a>
             </div>
             <img class="imagem-equipe" src="images/imagem-desenvolvedores.jpg" alt="">
         </div>
+    </div>
 
+    <div>
+        <h1 class="titulo2">Nossos Serviços</h1>
+        <div class="nossos-servicos conteudo-lado-a-lado">
 
+            <div class="conteiner-servico">
+                <h1 class="titulo-servico titulo2 ">Criação de sites</h1>
+                <div>
+                    <ul class="servico-lista">
+                        <li class="item-servico">Desde a concepção até a implementação e manutenção.</li>
+                        <li class="item-servico">Garantimos que o resultado final seja funcional, esteticamente atraente e
+                            intuitivo.
+                        </li>
+                        <li class="item-servico">Estamos aqui para transformar ideias em realidade digital.</li>
+                    </ul>
 
+                </div>
 
+            </div>
+
+            <div class="conteiner-servico">
+                <h1 class="titulo-servico titulo2 ">Serviços de analise de dados</h1>
+                <div class="conteudo-lado-a-lado">
+                    <ul class="servico-lista">
+                        <li class="item-servico">Nossa equipe de análise de dados avalia informações disponíveis.</li>
+                        <li class="item-servico">Identificamos padrões, tendências e dados relevantes.</li>
+                    </ul>
+
+                </div>
+            </div>
+
+            <div class="conteiner-servico">
+                <h1 class="titulo-servico titulo2 ">Marketing Digital</h1>
+                <div>
+                    <ul class="servico-lista">
+                        <li class="item-servico">Serviços especializados de social media e marketing digital.</li>
+                        <li class="item-servico">Impulsionar a presença online de nossos clientes.</li>
+                        <li class="item-servico">Criamos e gerenciamos conteúdo e engajamos a audiência.</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
 
     </div>
+
+
 </div>
 
 
 <audio id="effect-sound" src="effect/efeito1.mp3"></audio>
 
-    <script>
-        window.addEventListener('load', () => {
+<script>
+    window.addEventListener('load', () => {
         const header = document.querySelector('.floating-header');
         setTimeout(() => {
-        header.classList.add('animate');
-    }, 10); // Pequeno atraso para garantir que a animação comece após o carregamento
+            header.classList.add('animate');
+        }, 10); // Pequeno atraso para garantir que a animação comece após o carregamento
     });
 </script>
-
 
 
 </body>
